--- a/css/base/base.css
+++ b/css/base/base.css
@@ -39,7 +39,7 @@ body {
   background-color: #fff;
   color: #000;
   box-shadow: 0 4px 18px 0 #0000001a;
-  height: 50px;
+  height: 70px;
 }
 
 /* Верхнее меню */
@@ -50,7 +50,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  background-image: url("../../img/font-awesome-logo-full-svgrepo-com.svg");
+  background-image: url("../../img/logo.png");
 }
 
 /* .navigation { */
